# genate-ai-WIP

./: .env.example  .gitignore  CLAUDE.md  GENATE_CONTEXT.md  README.md  api.py  capture_run.py  pipeline.py  pipeline_validation_run.txt  pyproject.toml  render_test.py  run_carousel_test.py
.claude/: settings.local.json
agents/: TODO.md  __init__.py  _utils.py  asset_layer.py  compositor.py  copywriter.py  copywriting.py  evaluator.py  formatter.py  hero_image_providers.py  image_gen.py  input_processor.py  logo_clip.py  logo_ocr.py  logo_postprocess.py  planner.py  product_analysis.py  research_agent.py  strategy.py  ui_analyzer.py  visual_gen.py
auth/: __init__.py
config/: platform_rules.json  settings.py
datasets/: copywriting_seed.jsonl  evaluator_seed.jsonl  product_analysis_examples.jsonl  ui_analyzer_examples.jsonl
docs/: public-repo-notes.md  setup.md  validation_log.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
knowledge/: __init__.py  embeddings.py  qdrant_store.py  store.py  supabase_store.py
llm/: __init__.py  client.py
prompts/: __init__.py  copywriting_v1.yaml  evaluator_pipeline_v1.yaml  evaluator_v1.yaml  formatter_v1.yaml  loader.py  planner_v1.yaml  product_analysis_v1.yaml  strategy_v1.yaml  ui_analyzer_v1.yaml  visual_gen_v1.yaml
schemas/: __init__.py  brand_identity.py  brand_profile.py  content_brief.py  evaluator_output.py  formatted_content.py  input_package.py  knowledge_context.py  product_knowledge.py  research_proof_point.py  strategy_brief.py
scripts/: debug_logo.py  generate_decorations.py  real_pipeline_capture.py  real_sites_run.py  run_input_layer_real.py  test_vision_switch.py
test_data/: accent_svg_fix_validation.txt  bannerbear_direct_test.py  color_normalisation_validation.txt  first_real_pipeline_run.json  groq_instagram_run.json  groq_linkedin_run.json  groq_linkedin_run2.json  groq_three_platform_summary.txt  groq_twitter_run.json  image_gen_validation.txt  indian_browserstack_run.json  indian_chargebee_run.json  indian_clevertap_run.json  indian_darwinbox_run.json  indian_freshworks_run.json  indian_hasura_run.json  indian_moengage_run.json  indian_postman_run.json  indian_razorpay_run.json  indian_saas_companies (1).csv  indian_saas_validation_summary.txt  indian_zoho_run.json  input_layer_audit.json  input_layer_audit.txt  input_layer_audit_v2.txt  input_layer_audit_v3.txt  input_layer_real_run.json  instagram_run.json  last_pytest_run.txt  linkedin_run.json  logo_extraction_validation.txt  phase2_adaptive_text_validation.txt  phase2_three_site_validation.json  pipeline_first_run.json  pipeline_real_lemonhealth.ai_20260331T135439Z.json  pipeline_real_lemonhealth.ai_20260331T153749Z.json  (+40 more)
tests/: conftest.py  (+26 more)
(+52 files in other folders)
